--- a/www/custom_styles.css
+++ b/www/custom_styles.css
@@ -1,5 +1,13 @@
 /*Some custom css to modify the standard Shiny values. */
 
+p {
+  color: #000;
+  font-size: 1.1em;
+  font-family: sans-serif;
+  font-weight: 300;
+  padding-left: 10px;
+}
+
 hr {
   border-color: #808080 !important;
   height: 2px;
@@ -24,7 +32,7 @@ div.outer {
 
 /* Customize fonts */
 body, label, input, button, select {
-  font-family: 'Open Sans';
+  font-family: 'sans serif';
   font-weight: 400;
 }
 h1, h2, h3, h4 { font-weight: 400; }
@@ -163,12 +171,36 @@ img {
   padding-top: 10px;
 }
 
-.navbar-right {
-  margin-right: 50px;
+.navbar {
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.25);
+}
+
+.navbar-inverse .navbar-nav>li>a:hover,
+.navbar-inverse .navbar-nav>li>a:focus {
+  background-color: #616161;
+  color: #ffffff;
 }
 
 .navbar-brand {
-  padding-left: 24px;
+  font-size: 1.5em;
+  font-weight: 800;
+}
+
+.navbar-author {
+  font-size: 0.7em;
+  font-weight: 600;
+}
+
+/*This is the navbar...*/
+.container-fluid {
+  background-color: #003B87;
+  color: #f2f2f2;
+}
+
+
+.section.sidebar {
+  background-color: #f2f2f2;
+  border: 0 solid transparent;
 }
 
 .shiny-options-group {
