Blue navbar, white text

--- a/www/custom_styles.css
+++ b/www/custom_styles.css
@@ -193,7 +193,7 @@ img {
 
 /*This is the navbar...*/
 .container-fluid {
-  background-color: #003B87;
+  background-color: #005596;
   color: #f2f2f2;
 }
 
